{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 259,
  "lineage": "4d629949-5c7e-ec75-a002-b322e33b4555",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "first_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/foo",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "foo",
                "namespace": "default",
                "resource_version": "859546",
                "uid": "e50b69d9-02d6-4f71-b4a6-a10c7b045947"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "kalraandassociates.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "foo",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8081
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_deployment.deployments",
            "kubernetes_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "default/bar",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/canary": "true",
                  "nginx.ingress.kubernetes.io/canary-weight": "25",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "bar",
                "namespace": "default",
                "resource_version": "859543",
                "uid": "4d3dd6bf-da88-4560-a3a9-009d5baffc72"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "kalraandassociates.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "bar",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8082
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_deployment.deployments",
            "kubernetes_service.services"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "default/boom",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/canary": "true",
                  "nginx.ingress.kubernetes.io/canary-weight": "50",
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "boom",
                "namespace": "default",
                "resource_version": "859549",
                "uid": "8a054c40-6036-422d-9d2a-be70617cb7a6"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "kalraandassociates.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "boom",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8083
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_deployment.deployments",
            "kubernetes_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "id": "default/foo",
            "metadata": [
              {
                "generation": 0,
                "name": "foo",
                "namespace": "default",
                "resource_version": "859334",
                "uid": "3b6dea5a-dd27-4639-9173-bcd470179630"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.100.156.137",
                "health_check_node_port": 0,
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8081,
                    "protocol": "TCP",
                    "target_port": "8081"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "foo"
                },
                "session_affinity": "ClientIP",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "id": "default/bar",
            "metadata": [
              {
                "generation": 0,
                "name": "bar",
                "namespace": "default",
                "resource_version": "859342",
                "uid": "c88e876a-c686-433f-8d9c-fe16294759f1"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.100.213.130",
                "health_check_node_port": 0,
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8082,
                    "protocol": "TCP",
                    "target_port": "8082"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "bar"
                },
                "session_affinity": "ClientIP",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "id": "default/boom",
            "metadata": [
              {
                "generation": 0,
                "name": "boom",
                "namespace": "default",
                "resource_version": "859338",
                "uid": "22d2ae42-9daa-4d43-bb0a-d3430bdc333e"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.100.252.222",
                "health_check_node_port": 0,
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8083,
                    "protocol": "TCP",
                    "target_port": "8083"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "boom"
                },
                "session_affinity": "ClientIP",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    }
  ]
}